--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: ^3.9.0
 
 dependencies:
+  dartz: ^0.10.1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
+  get_it: ^8.2.0
 
 dev_dependencies:
   flutter_test:
