--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,13 @@ environment:
   sdk: ^3.9.0
 
 dependencies:
+  bloc: ^9.0.0
   dartz: ^0.10.1
+  dio: ^5.9.0
   equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   get_it: ^8.2.0
 
 dev_dependencies:
