--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.5.0
+  build_runner: ^2.7.0
   flutter_lints: ^5.0.0
 
 flutter:
