--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   get_it: ^8.2.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
